@@ -24,6 +24,8 @@ Changes in @NEW@:
     * The bootstrap python module dependency discovery proxy now
       provides additional useful informational messages to aid
       debugging.
+    * Conary proxies are responsible for reassembling the content for
+      changesets containing capsules. (CNY-3228, CNY-3259)
 
   o Bug Fixes:
     * In-core changesets could be merged into a ReadOnlyChangeSet a single
